[package]
name = "rs_library"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rs_system={path="../rs_system"}
anyhow = "1.0.81"
axum = "0.7.5"
tokio = { version = "1.37.0", features = ["full"] }
listenfd = "1.0.1"